[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/fontes/pixelart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/scripts/tela_dePausa.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="tela_dePausa" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -34.0
margin_right = 54.0
margin_bottom = 34.0

[node name="continue" type="Button" parent="VBoxContainer"]
margin_right = 108.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "CONTINUE"
flat = true

[node name="menu" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 108.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "MENU"
flat = true

[node name="desktop" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 108.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "DESKTOP"
flat = true

[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/desktop" to="." method="_on_desktop_pressed"]
